--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     }
   ],
   "scripts": {
-    "build": "father-build",
+    "build": "father build",
     "prepare": "npm run build",
     "postpublish": "git push --tags",
     "beta": "npm publish --tag beta",
@@ -58,6 +58,7 @@
     "react-dom": ">=16.8.0"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.13.3",
     "deep-equal": "^2.0.3",
     "rollup-plugin-copy": "^3.4.0"
   },
