--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "test": "umi-test",
     "test:coverage": "umi-test --coverage"
   },
-  "main": "dist/index.js",
-  "module": "dist/index.esm.js",
+  "main": "src/index.js",
+  "module": "src/index.js",
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
@@ -46,14 +46,9 @@
   "dependencies": {
     "@ant-design/icons": "^4.0.2",
     "async-validator": "^3.5.1",
-    "color": "^3.1.2",
-    "lodash": "^4.17.20",
-    "moment": "^2.24.0",
-    "nanoid": "^3.1.20",
-    "react-sortable-hoc": "^1.11.0"
+    "lodash": "^4.17.20"
   },
   "peerDependencies": {
-    "antd": "4.x",
     "react": ">=16.8.0",
     "react-dom": ">=16.8.0"
   },
