--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "test": "umi-test",
     "test:coverage": "umi-test --coverage"
   },
-  "main": "src/index.js",
-  "module": "src/index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.esm.js",
   "gitHooks": {
     "pre-commit": "lint-staged"
   },
