--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "lodash": "^4.17.20"
   },
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "@tarojs/taro": "2.2.17"
   },
   "devDependencies": {
     "babel-plugin-import": "^1.13.3",
